...
import 'package:the_library/widgets/book_list_view.dart';
import 'package:the_library/widgets/sort_type_and_show_style_widget.dart';

class ShelfDetails extends StatelessWidget {
  final List<String> sortType = ["Author", "Recent", "Title"];
  final List<String> popupRoutes = <String>[
    "Rename shelf",
    "Delete shelf",
  ];

  TextEditingController shelfName = new TextEditingController();

  final ShelfVO? shelf;
...
                                    shelfBloc.onTabRenameShelf(shelf);
                                  },
                                ),
                                TextField(
                                  cursorHeight: 30.0,
                                  controller: shelfName,
                                  key: Key("TextFieldKey"),
                                  decoration: InputDecoration(
                                    hintText: "Shelf name",
                                    hintStyle: TextStyle(
                                      fontSize: 25.0,
                                      fontWeight: FontWeight.w500,
                                      color: Colors.black54,
                                    ),
                                  ),
...
