...
                indicatorColor: Colors.blue,
                indicatorSize: TabBarIndicatorSize.label,
                unselectedLabelColor: Colors.black54,
                labelColor: Colors.blue,
                tabs: [
                  TabBarTextSession("Your books"),
                  TabBarTextSession("Shelves"),
                  //TabBarTextSession("Series"),
                ],
              ),
            ),
            Container(
              //height: MediaQuery.of(context).size.height / 0.1,
...
