...
            Positioned(
              //bottom: 20,
              top: 550,
              left: 140,
              child: FloatingActionButton.extended(
                onPressed: () => _navigateToCreateShelf(context),
                label: book != null ? Text("Add to new") : Text("Create new"),
                icon: Icon(
                  Icons.create,
                ),
              ),
            ),
          ],
...
